--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,6 +8,7 @@
 }
 .button {
   width: 10%;
+  
 }
 .paper {
   display: flex;
@@ -15,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   width: 40%;
+  position: static !important;
 }
 
 @media screen and (max-width: 480px) {
