added closeButton and other changes

--- a/src/compoents/HomePage/HomePage.module.css
+++ b/src/compoents/HomePage/HomePage.module.css
@@ -4,3 +4,9 @@
 .textfield {
   margin-top: 10px !important;
 }
+.btn{
+  position: absolute !important ;
+  color: red;
+  right: 0px;
+  top: 5px;
+}
