--- a/src/compoents/modal/Result.module.css
+++ b/src/compoents/modal/Result.module.css
@@ -7,9 +7,9 @@
     top: 0px;
     width: 100%;
     height: 100vh;
-    background-color: rgba(167, 42, 42, 0.425);
-
-   z-index: 100;
+    background-color: rgba(96, 98, 99, 0.329);
+   
+   
 }
 .overlay{
     background-color: white;
@@ -26,4 +26,7 @@
     color: red;
     right: 0px;
     top: 5px;
+}
+.overlay h3{
+    margin-left: 10px;
 }
