--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,17 @@
   align-items: center;
   margin-top: 10vh;
   width: 100%;
+  font-family:
+          "-apple-system",
+          "BlinkMacSystemFont",
+          '"Segoe UI"',
+          "Roboto",
+          '"Helvetica Neue"',
+          "Arial",
+          "sans-serif",
+          '"Apple Color Emoji"',
+          '"Segoe UI Emoji"',
+          '"Segoe UI Symbol"'
 }
 .button {
   width: 10%;
