--- a/src/compoents/modal/Result.module.css
+++ b/src/compoents/modal/Result.module.css
@@ -13,7 +13,6 @@
 }
 .overlay{
     background-color: white;
-    position: relative;
     width: 30%;
     height: 30%;
     border: 2px solid rgba(128, 128, 128, 0.514);
@@ -22,9 +21,9 @@
 
 }
 .btn{
-    position: absolute !important ;
+    position: absolute;
     color: red;
-    right: 0px;
+    right: 50px;
     top: 5px;
 }
 .overlay h3{
